--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run-all start-server",
     "start-react" :"react-scripts start",
     "start-server" : "node ./node_modules/minhas-series-server/index.js",
     "build": "react-scripts build",
