--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "all": "^0.0.0",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "minhas-series-server": "https://github.com/devpleno/minhas-series-server",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.9",
+    "run": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "npm run-all start-server",
-    "start-react" :"react-scripts start",
-    "start-server" : "node ./node_modules/minhas-series-server/index.js",
+    "start-react": "react-scripts start",
+    "start-server": "node ./node_modules/minhas-series-server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
