--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run-all start-server",
+    "start": "npm-run-all build start-server",
     "start-react": "react-scripts start",
     "start-server": "node ./node_modules/minhas-series-server/index.js",
     "build": "react-scripts build",
